--- a/snap-overlay/templates/horizon-nginx.conf.j2
+++ b/snap-overlay/templates/horizon-nginx.conf.j2
@@ -3,8 +3,8 @@
 # also update "api-name" for the socket.
 server {
     listen 80;
-    access_log {{ snap_common }}/log/nginx-access.log;
-    error_log {{ snap_common }}/log/nginx-error.log;
+    error_log syslog:server=unix:/dev/log;
+    access_log syslog:server=unix:/dev/log;
     location / {
         include {{ snap }}/usr/conf/uwsgi_params;
         uwsgi_param SCRIPT_NAME '';
