--- a/snap-overlay/templates/keystone-nginx.conf.j2
+++ b/snap-overlay/templates/keystone-nginx.conf.j2
@@ -1,7 +1,7 @@
 server {
     listen 5000;
-    access_log {{ snap_common }}/log/nginx-access.log;
-    error_log {{ snap_common }}/log/nginx-error.log;
+    error_log syslog:server=unix:/dev/log;
+    access_log syslog:server=unix:/dev/log;
     location / {
         include {{ snap }}/usr/conf/uwsgi_params;
         uwsgi_param SCRIPT_NAME '';
