--- a/snap-overlay/templates/virtlogd.conf.j2
+++ b/snap-overlay/templates/virtlogd.conf.j2
@@ -57,6 +57,7 @@
 #log_outputs="3:syslog:virtlogd"
 #
 #log_outputs="1:file:{{ snap_common }}/log/libvirtd.log"
+log_outputs="2:syslog:virtlogd"
 
 # The maximum number of concurrent client connections to allow
 # over all sockets combined.
