--- a/snap-overlay/templates/keystone.database.conf.j2
+++ b/snap-overlay/templates/keystone.database.conf.j2
@@ -1,2 +1,2 @@
 [database]
-connection = mysql+pymysql://keystone:keystone@{{ extgateway }}/keystone
+connection = mysql+pymysql://keystone:keystone@{{ control_ip }}/keystone
