--- a/snap-overlay/templates/nova.conf.d.rabbitmq.conf.j2
+++ b/snap-overlay/templates/nova.conf.d.rabbitmq.conf.j2
@@ -1,2 +1,2 @@
 [DEFAULT]
-transport_url = rabbit://openstack:rabbitmq@{{ extgateway }}
+transport_url = rabbit://openstack:rabbitmq@{{ control_ip }}
