--- a/snap-overlay/templates/glance.database.conf.j2
+++ b/snap-overlay/templates/glance.database.conf.j2
@@ -1,2 +1,2 @@
 [database]
-connection = mysql+pymysql://glance:glance@{{ extgateway }}/glance
+connection = mysql+pymysql://glance:glance@{{ control_ip }}/glance
