--- a/snap-overlay/templates/neutron.keystone.conf.j2
+++ b/snap-overlay/templates/neutron.keystone.conf.j2
@@ -2,12 +2,12 @@
 auth_strategy = keystone
 
 [keystone_authtoken]
-auth_uri = http://{{ extgateway }}:5000
-auth_url = http://{{ extgateway }}:5000
-memcached_servers = {{ extgateway }}:11211
+auth_uri = http://{{ control_ip }}:5000
+auth_url = http://{{ control_ip }}:5000
+memcached_servers = {{ control_ip }}:11211
 auth_type = password
 project_domain_name = default
 user_domain_name = default
 project_name = service
 username = neutron
-password = neutron
+password = {{ neutron_password }}
