--- a/snap-overlay/templates/neutron.nova.conf.j2
+++ b/snap-overlay/templates/neutron.nova.conf.j2
@@ -3,11 +3,11 @@ notify_nova_on_port_status_changes = True
 notify_nova_on_port_data_changes = True
 
 [nova]
-auth_url = http://{{ extgateway }}:5000
+auth_url = http://{{ control_ip }}:5000
 auth_type = password
 project_domain_name = default
 user_domain_name = default
 region_name = microstack
 project_name = service
 username = nova
-password = nova
+password = {{ nova_password }}
