--- a/snap-overlay/templates/nova.conf.d.neutron.conf.j2
+++ b/snap-overlay/templates/nova.conf.d.neutron.conf.j2
@@ -1,13 +1,13 @@
 [neutron]
-url = http://{{ extgateway }}:9696
-auth_url = http://{{ extgateway }}:5000
-memcached_servers = {{ extgateway }}:11211
+url = http://{{ control_ip }}:9696
+auth_url = http://{{ control_ip }}:5000
+memcached_servers = {{ control_ip }}:11211
 auth_type = password
 project_domain_name = default
 user_domain_name = default
 region_name = microstack
 project_name = service
 username = neutron
-password = neutron
+password = {{ neutron_password }}
 service_metadata_proxy = True
 metadata_proxy_shared_secret = supersecret
