--- a/snap-overlay/templates/nova.conf.d.nova-placement.conf.j2
+++ b/snap-overlay/templates/nova.conf.d.nova-placement.conf.j2
@@ -4,6 +4,6 @@ project_domain_name = default
 project_name = service
 auth_type = password
 user_domain_name = default
-auth_url = http://{{ extgateway }}:5000
+auth_url = http://{{ control_ip }}:5000
 username = placement
-password = placement
+password = {{ placement_password }}
