Fixed dashboard_allowed_hosts config setting.
Now happens in a template, just like all the other values, which fixes
an issue where it doesn't get overridden during an upgrade.

Change-Id: Ied84ddc0282c77de6797f90efc8923ae66a9d59e

--- a/snap-overlay/templates/05_snap_tweaks.j2
+++ b/snap-overlay/templates/05_snap_tweaks.j2
@@ -28,7 +28,7 @@ OPENSTACK_KEYSTONE_DEFAULT_ROLE = "_member_"
 
 # Turn off external access for now.  (This should be turned on once we
 # have hooks for setting a non default password.)
-ALLOWED_HOSTS = ['10.20.20.1', 'localhost', '127.0.0.1']
+ALLOWED_HOSTS = "{{ dashboard_allowed_hosts }}".split(",")
 
 # Use memcached as our caching backend.
 CACHES = {
