Strict confinement related fixes
(Not complete strict confinement, but these don't break anything
devmode related, and get us closer to having strict confinement
working.)

Added more needed interfaces to snapcraft.yaml.

Created a wrapper around dnsmasq so that we can run as the snap_daemon
user. Added snap_daemon user to snapcraft.yaml.

Added a utility script for connecting interfaces that don't auto
connect (tools/connect.sh). Not useful for production, but saves a lot
of time when testing.

libvirt no longer uses unix sock group "sudo" (can't run setguid in
strict confinement).

Got rid of "find_missing_plugins" in init script. By the time we
release strict confinement to production, all those plugins will auto
connect.

Change-Id: I8324ac7bd0332c41cac17703eb15d7301e7babf3

--- a/snap-overlay/templates/libvirtd.conf.j2
+++ b/snap-overlay/templates/libvirtd.conf.j2
@@ -82,7 +82,7 @@
 # without becoming root.
 #
 # This is restricted to 'root' by default.
-unix_sock_group = "sudo"
+# unix_sock_group = "sudo"
 
 # Set the UNIX socket permissions for the R/O socket. This is used
 # for monitoring VM status only
