Fix Clustering after a rebase to Ussuri + OVN
The previous work included incorrect handling of
configuration for the multi-node case in terms of
OVN configuration.

This change addresses that in addition to other
minor fixes related to the clustering setup.

Change-Id: Ibf04af95271d1746f59192d11831d6129ba5b8d0

--- a/snap-overlay/templates/nova-snap.conf.j2
+++ b/snap-overlay/templates/nova-snap.conf.j2
@@ -20,4 +20,4 @@ lock_path = {{ snap_common }}/lock
 ovsdb_connection = unix:{{ snap_common }}/run/openvswitch/db.sock
 
 [cinder]
-os_region_name = microstack
+os_region_name = {{ region_name }}
