--- a/snap-overlay/templates/neutron.nova.conf.j2
+++ b/snap-overlay/templates/neutron.nova.conf.j2
@@ -7,7 +7,7 @@ auth_url = http://{{ control_ip }}:5000
 auth_type = password
 project_domain_name = default
 user_domain_name = default
-region_name = microstack
+region_name = {{ region_name }}
 project_name = service
 username = nova
 password = {{ nova_password }}
