--- a/snap-overlay/templates/placement.conf.d.keystone.conf.j2
+++ b/snap-overlay/templates/placement.conf.d.keystone.conf.j2
@@ -1,7 +1,7 @@
 [keystone_authtoken]
 auth_uri = http://{{ control_ip }}:5000
 auth_url = http://{{ control_ip }}:5000
-memcached_servers = {{ control_ip }}:11211
+memcached_servers = {{ compute_ip }}:11211
 auth_type = password
 project_domain_name = default
 user_domain_name = default
