--- a/snap-overlay/templates/glance.database.conf.j2
+++ b/snap-overlay/templates/glance.database.conf.j2
@@ -1,2 +1,2 @@
 [database]
-connection = mysql+pymysql://glance:glance@{{ control_ip }}:{{ mysql_port }}/glance
+connection = mysql+pymysql://glance:{{ glance_password }}@{{ control_ip }}:{{ mysql_port }}/glance
