--- a/snap-overlay/templates/microstack.json.j2
+++ b/snap-overlay/templates/microstack.json.j2
@@ -1,7 +1,7 @@
 {
     "openstack": {
         "admin": {
-            "password": "{{ ospassword }}",
+            "password": "{{ keystone_password }}",
             "project_domain_name": "default",
             "project_name": "admin",
             "user_domain_name": "default",
