--- a/snap-overlay/templates/neutron.conf.d.rabbitmq.conf.j2
+++ b/snap-overlay/templates/neutron.conf.d.rabbitmq.conf.j2
@@ -1,2 +1,2 @@
 [DEFAULT]
-transport_url = rabbit://openstack:rabbitmq@{{ control_ip }}:{{ rabbit_port }}
+transport_url = rabbit://openstack:{{ rabbitmq_password }}@{{ control_ip }}:{{ rabbit_port }}
