--- a/snap-overlay/templates/neutron.database.conf.j2
+++ b/snap-overlay/templates/neutron.database.conf.j2
@@ -1,2 +1,2 @@
 [database]
-connection = mysql+pymysql://neutron:neutron@{{ control_ip }}:{{ mysql_port }}/neutron
+connection = mysql+pymysql://neutron:{{ neutron_password }}@{{ control_ip }}:{{ mysql_port }}/neutron
