Fix the Neutron OVN metadata service setup
* Set the Nova metadata server address properly so that
  neutron-ovn-metadata-agents running on compute nodes forward the
  requests to the right place instead of trying to use 127.0.0.1;
* generate a random secret instead of hard-coding one.

Change-Id: I6525a4150808ef257bb7a8f49589c1151ca279b0

--- a/snap-overlay/templates/neutron_ovn_metadata_agent.ini.j2
+++ b/snap-overlay/templates/neutron_ovn_metadata_agent.ini.j2
@@ -1,5 +1,8 @@
 [DEFAULT]
-metadata_proxy_shared_secret = supersecret
+
+nova_metadata_host = {{ control_ip }}
+
+metadata_proxy_shared_secret = {{ ovn_metadata_proxy_shared_secret }}
 
 [ovs]
 ovsdb_connection = unix:{{ snap_common }}/run/openvswitch/db.sock
