--- a/snap-overlay/templates/nova.conf.d.neutron.conf.j2
+++ b/snap-overlay/templates/nova.conf.d.neutron.conf.j2
@@ -10,4 +10,4 @@ project_name = service
 username = neutron
 password = {{ neutron_password }}
 service_metadata_proxy = True
-metadata_proxy_shared_secret = supersecret
+metadata_proxy_shared_secret = {{ ovn_metadata_proxy_shared_secret }}
